fixed little not centered #to-about-btn

--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ body {
 .main_btn {
     display: flex;
     justify-content:center;
-    padding: 10% 10% 10% 0%;
+    padding: 80px;
 }
 
 #to-about-btn {
